[gd_scene load_steps=4 format=3 uid="uid://reg1rho6mvww"]

[ext_resource type="Script" uid="uid://ikbgnryq7hp2" path="res://Scripts/pause_menu.gd" id="1_k0w1u"]
[ext_resource type="FontFile" uid="uid://cr5k5jdmvsy80" path="res://Art/Font/New_Rocker/NewRocker-Regular.ttf" id="2_bpi0q"]
[ext_resource type="Texture2D" uid="uid://dsb8ng1k7ub8o" path="res://Art/PunkrockMainMenuBackground.jpg" id="2_vmyb1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3344.0
offset_top = -3741.0
offset_right = 4396.0
offset_bottom = 1259.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vmyb1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVboxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="CenterContainer/MainVboxContainer"]
custom_minimum_size = Vector2(0, 145.53)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainVboxContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_right = 53.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 72
text = "GAME PAUSED"

[node name="ButtonVboxContainer" type="VBoxContainer" parent="CenterContainer/MainVboxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="TextureButton" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 30
text = "Return to Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer/OptionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -11.5
offset_right = 27.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 30
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainVboxContainer/ButtonVboxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 30
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/MainVboxContainer/ButtonVboxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainVboxContainer/ButtonVboxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainVboxContainer/ButtonVboxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainVboxContainer/ButtonVboxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
